--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,10 @@ h1 {
 	width: 25px;
 	height: 3px;
 	background-color: white;
-	margin: 5px;
+    margin: 5px;
+    transition: all 0.3s ease;
 }
+
 @media screen and (max-width: 1024px) {
 	.nav-links {
 		width: 60%;
@@ -60,6 +62,9 @@ h1 {
 }
 
 @media screen and (max-width: 768px) {
+	body {
+		overflow-x: hidden;
+	}
 	.nav-links {
 		position: absolute;
 		right: 0px;
@@ -69,5 +74,30 @@ h1 {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		width: 50%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
 	}
+.nav-links li {
+	opacity: 0;
+}
+
+.burger {
+	display: block;
+}
+
+.nav-active{
+    transform: translateX(0%);
+}
+
+.toggle.line1 {
+    transform: rotate(-45deg) translate(-5px,6px);
+}
+
+.toggle.line2 {
+    opacity: 0;
+}
+
+.toggle.line3 {
+    transform: rotate(45deg) translate(-5px,-6px);
 }
