Changed navbar design and added gallery page

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,21 +1,12 @@
 body {
-	background-image: url(../assets/images/bckgrd_img2.jpg);
+	background-color: #fff6e1;
 	max-width: 100%;
 	height: auto;
 	background-repeat: no-repeat;
 	background-size: cover;
+	padding-top: 70px;
 	z-index: -1;
-	overflow: hidden;
 }
-
-/* h1 {
-	font-family: 'Cinzel', serif;
-	color: #fff6e1;
-	letter-spacing: 5px;
-	margin-left: 300px;
-	padding-top: 60px;
-	font-weight: 150;
-} */
 
 .navbar-inverse {
 	background-color: #d17804;
@@ -26,6 +17,7 @@ body {
 	color: #fff6e1;
 	letter-spacing: 5px;
 }
+
 .navbar-inverse .navbar-brand {
 	color: #fff6e1;
 	letter-spacing: 3px;
@@ -35,8 +27,10 @@ body {
 
 h1 {
 	font-family: 'Cinzel', serif;
-	color: #fff6e1;
-	letter-spacing: 10px;
-	margin-left: 220px;
-	padding-top: 90px;
+	color: #d17804;
+	letter-spacing: 5px;
+	margin-left: 480px;
+	padding-top: 5px;
+	padding-bottom: 30px;
+	font-weight: 150;
 }
