--- a/css/gallery.css
+++ b/css/gallery.css
@@ -25,7 +25,7 @@ body {
 	font-weight: 900;
 }
 
-h1 {
+.header {
 	font-family: 'Cinzel', serif;
 	color: #d17804;
 	letter-spacing: 5px;
@@ -33,4 +33,36 @@ h1 {
 	padding-top: 5px;
 	padding-bottom: 30px;
 	font-weight: 150;
+}
+.social-med {
+	position: relative;
+	left: 40%;
+	color: #d17804;
+	font-size: 35px;
+	margin-bottom: 0px;
+	padding-top: 10px;
+}
+
+.social-med:hover {
+	color: #836e4f;
+}
+
+.fab:hover {
+	color: #836e4f;
+}
+.fab {
+	color: #d17804;
+}
+
+@media screen and (max-width: 327px) {
+	.header {
+		font-size: 80%;
+		float: right;
+	}
+}
+@media screen and (max-width: 768px) {
+	.header {
+		font-size: 120%;
+		float: right;
+	}
 }
