--- a/css/gallery.css
+++ b/css/gallery.css
@@ -5,7 +5,7 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 	padding-top: 70px;
-	z-index: -1;
+	/* z-index: -1; */
 }
 
 .navbar-inverse {
@@ -29,10 +29,11 @@ body {
 	font-family: 'Cinzel', serif;
 	color: #d17804;
 	letter-spacing: 5px;
-	margin-left: 480px;
+	margin-left: 40%;
 	padding-top: 5px;
-	padding-bottom: 30px;
+	padding-bottom: 10px;
 	font-weight: 150;
+	max-width: 100%;
 }
 
 .social-med {
@@ -55,17 +56,27 @@ body {
 .fab {
 	color: #d17804;
 }
-
-@media screen and (max-width: 327px) {
-	.header {
-		font-size: 80%;
-		float: right;
-	}
+hr {
+	border: 0;
+	height: 1px;
+	background-image: linear-gradient(
+		to right,
+		rgba(0, 0, 0, 0),
+		rgba(0, 0, 0, 0.75),
+		rgba(0, 0, 0, 0)
+	);
+	color: #d17804;
+}
+hr,
+.header {
+	max-width: 100%;
+	max-height: auto;
+	overflow: hidden;
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
 	.header {
 		font-size: 120%;
 		float: right;
 	}
-}
+} */
